--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
   <link href="css/main.css" rel="stylesheet">
 </head>
 <body>
-
+  <article class="card">
+    <header class="card-head">
+      <h2 class="card-title">Stegosaurus</h2>
+      <span class="card-label"> Plantpeater</span>
+      <<img class="img-flex" src="http://placehold.it/640x480" alt="">
+    </header>
+    <div class="card-body">
+      <p> The Stegosaurus is an arnoured dinosaur with distinctive back plates and tail spikes.</p>
+    </div>
+  </article>
 </body>
 </html>
