--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
     <header class="card-head">
       <h2 class="card-title">Stegosaurus</h2>
       <span class="card-label"> Plant-eater</span>
-      <<img class="img-flex" src="http://placehold.it/640x480" alt="">
+      <img class="img-flex" src="http://placehold.it/640x480" alt="">
     </header>
     <div class="card-body">
-      <p> The Stegosaurus is an arnoured dinosaur with distinctive back plates and tail spikes.</p>
+      <p> The Stegosaurus is an armoured dinosaur with distinctive back plates and tail spikes.</p>
     </div>
   </article>
 </body>
